# py-cicd-sample

./: README.md  locustfile.py  pyproject.toml
.github/workflows/: cicd.yml
tests/: test_main.py
