[project]
name = "py-cicd-sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yusei", email = "realthingshakes25@gmail.com" }
]
dependencies = [
    "fastapi>=0.110.3",
    "pytest>=8.2.0",
    "ruff>=0.4.2",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "locust>=2.26.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_cicd_sample"]
